Read PCAPdroid extensions metadata from Pcapng
A PCAP/Pcapng reader has been implemented to support parsing the
PCAPdroid extensions metadata. This allows displaying a number of
information in the UI when loading from a Pcapng file, in particular:

- when the dump was generated with root, show the capture interface
  name
- show the UID (app) related to a given connection
- if the dump contains UIDs of uninstalled apps, show the
  original package name and app name

Closes #479

--- a/app/src/main/jni/core/CMakeLists.txt
+++ b/app/src/main/jni/core/CMakeLists.txt
@@ -3,12 +3,13 @@ project(core)
 add_library(capture SHARED
         pcapdroid.c
         capture_vpn.c
-        capture_libpcap.c
+        capture_pcap.c
         ip_lru.c
         ndpi_config.c
         crc32.c
         blacklist.c
         pcap_dump.c
+        pcap_reader.c
         log_writer.c
         port_map.c
         jni_impl.c)
