--- a/app/src/main/jni/tests/Makefile
+++ b/app/src/main/jni/tests/Makefile
@@ -6,14 +6,14 @@ clean:
 run_tests:
 	mkdir -p build/test
 	cd build/test && \
-		cmake -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS="-fsanitize=address,leak -fno-omit-frame-pointer -O1" ../.. && \
+		cmake -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS="-fsanitize=address,leak -DHAVE_GNU_STRERROR_R -fno-omit-frame-pointer -O1" ../.. && \
 		$(MAKE) run_tests
 
 fuzz:
 	# Note: corpus should be specific of a single target
 	mkdir -p build/${FUZZ_TARGET}
 	cd build/${FUZZ_TARGET} && \
-		cmake -DFUZZING=1 -DCMAKE_C_COMPILER=clang ../.. && \
+		cmake -DFUZZING=1 -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS="-DHAVE_GNU_STRERROR_R" ../.. && \
 		$(MAKE) ${FUZZ_TARGET}
 	cd build/${FUZZ_TARGET}/fuzz && \
 		mkdir -p CORPUS && \
