Reduce blacklists RAM usage and increase limit to 1500k rules
sparsehash is now used to reduce memory usage of malware blacklists.
uthash introduces a 56 bytes overhead per-item (UT_hash_handle).
sparsehash, on the other, hand, only has ~16 bytes of overhead (HTItem).
This can also be further reduced. With 400k rules, this currently
provides a 25 MB reduced usage. Lookup performance is also similar
to uthash.

--- a/app/src/main/jni/common/CMakeLists.txt
+++ b/app/src/main/jni/common/CMakeLists.txt
@@ -1,3 +1,4 @@
 project(common C)
 
-ADD_LIBRARY(common STATIC uid_lru.c utils.c jni_utils.c uid_resolver.c)
+ADD_LIBRARY(common STATIC uid_lru.c utils.c jni_utils.c uid_resolver.c
+  ../third_party/libchash.c)
