Update the workflows to only build the standard apk

--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -17,4 +17,4 @@ jobs:
         distribution: 'temurin'
         
     - run: ./gradlew test
-    - run: ./gradlew assembleDebug -PdoNotStrip
+    - run: ./gradlew assembleStandardDebug -PdoNotStrip
