--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -16,4 +16,4 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         
-    - run: ./gradlew.bat assembleDebug
+    - run: ./gradlew.bat assembleStandardDebug
