Add Azerbaijani, Tamil and Polish languages to production

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
 
         // only include full translations
         // NOTE: keep in sync with locales_config.xml
-        resourceConfigurations += ["en", "ar", "de", "es", "in", "it", "ru", "tr", "uk", "zh-rCN"]
+        resourceConfigurations += ["en", "ar", "az", "de", "es", "in", "it", "pl", "ru", "ta", "tr",
+                                   "uk", "zh-rCN"]
 
         buildConfigField "long", "BUILD_TIME", System.currentTimeMillis() + "L"
     }
