Integrato nuovo serri.tesi package: ConnectionRecord, HttpRequestRecord, TrackerService, TrackerRepository"...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     ndkVersion "28.2.13676358"
@@ -91,9 +92,16 @@ android {
         unitTests.includeAndroidResources = true
     }
     namespace 'com.emanuelef.remote_capture'
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core:1.12.0'
+
+
 // Tests
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.test:core:1.7.0'
