--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,9 @@
             android:name=".activities.EditFilterActivity"
             android:launchMode="singleTop" />
         <activity
+            android:name=".activities.HttpLogFilterActivity"
+            android:launchMode="singleTop" />
+        <activity
             android:name=".activities.MitmSetupWizard"
             android:launchMode="singleTop" />
         <activity
