--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,10 +132,15 @@ dependencies {
     // Google Play Services Location (x tesi)
     implementation "com.google.android.gms:play-services-location:21.0.1"
 
-    // Coroutines (già dovresti averle)
+    //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
-    // Supporto per `await()` su Tasks
+    //Supporto per `await()` su Tasks
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3"
+
+    //Dipendenza OkHttp per invio batch
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
+    implementation("com.google.code.gson:gson:2.10.1")
+
 }
