Fix mismatched HTTP/2 replies with multiplexing (ushark)
When decrypting PCAP/Pcapng, the HTTP/2 replies would be mismatched
when HTTP/2 multiplexing was used and replies were received out of order.

To fix this, keep track of the HTTP/2 stream IDs to correcly match HTTP
requests to replies

--- a/app/src/main/jni/tests/Makefile
+++ b/app/src/main/jni/tests/Makefile
@@ -6,7 +6,7 @@ clean:
 run_tests:
 	mkdir -p build/test
 	cd build/test && \
-		cmake -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS="-fsanitize=address,leak -DHAVE_GNU_STRERROR_R -fno-omit-frame-pointer -O1" ../.. && \
+		cmake -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS="-fsanitize=address,leak -DHAVE_GNU_STRERROR_R -fno-omit-frame-pointer -g -O0" ../.. && \
 		$(MAKE) run_tests
 
 fuzz:
