update gestione sessione + collegamento/integrazione tra android e backend

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.core:core:1.12.0'
+    implementation 'androidx.activity:activity:1.8.0'
 
 
 // Tests
