--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,77 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    package="com.emanuelef.remote_capture"
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-permission-sdk-23 android:name="android.permission.QUERY_ALL_PACKAGES" /> <!-- https://developer.android.com/preview/privacy/package-visibility -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WRITE_CLIPS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" /> <!-- Required with root to properly resolve UIDs cross-users/profiles. Granted via root -->
+    <uses-permission
+        android:name="android.permission.INTERACT_ACROSS_USERS"
+        android:protectionLevel="signature"
+        tools:ignore="ProtectedPermissions" />
 
-    <!-- Required with root to properly resolve UIDs cross-users/profiles. Granted via root -->
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" android:protectionLevel="signature"  tools:ignore="ProtectedPermissions" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false" />
 
-    <uses-feature android:name="android.software.leanback" android:required="false" />
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-    <uses-feature android:name="android.hardware.wifi" android:required="false" />
-
-    <!--Tesi: Permessi per geolocalizzazione-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
-
+    <!-- Tesi: Permessi per geolocalizzazione -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:name=".PCAPdroid"
+        android:allowBackup="true"
+        android:usesCleartextTraffic="true"
+        android:banner="@drawable/banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/pcapdroid_app_name"
+        android:localeConfig="@xml/locales_config"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:banner="@drawable/banner"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:allowBackup="true"
         tools:replace="android:label"
-        android:localeConfig="@xml/locales_config"
         tools:targetApi="tiramisu">
-
+        <!-- Activity per tesi -->
         <activity
-            android:name=".activities.MainActivity"
-            android:theme="@style/AppTheme.SplashScreen"
-            android:launchMode="singleTop"
+            android:name="serri.tesi.ui.MainActivity"
             android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
-        </activity>
 
+        </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.SplashScreen">
+        </activity>
         <activity
             android:name=".activities.CaptureCtrl"
-            android:theme="@style/AppTheme.Floating"
+            android:exported="true"
             android:launchMode="singleTop"
-            android:exported="true" />
+            android:theme="@style/AppTheme.Floating" />
         <activity
             android:name=".activities.prefs.EditCtrlPermissions"
             android:parentActivityName=".activities.prefs.SettingsActivity" />
-
-        <activity
-            android:name=".activities.OnBoardingActivity" />
-        <activity
-            android:name=".activities.ErrorActivity" />
-        <activity
-            android:name=".activities.ConnectionDetailsActivity" />
-        <activity
-            android:name=".activities.AppDetailsActivity" />
-        <activity
-            android:name=".activities.ConnectionsActivity" />
+        <activity android:name=".activities.OnBoardingActivity" />
+        <activity android:name=".activities.ErrorActivity" />
+        <activity android:name=".activities.ConnectionDetailsActivity" />
+        <activity android:name=".activities.AppDetailsActivity" />
+        <activity android:name=".activities.ConnectionsActivity" />
         <activity
             android:name=".activities.AppsActivity"
             android:launchMode="singleTop"
@@ -79,7 +88,7 @@
         <activity
             android:name=".activities.StatsActivity"
             android:launchMode="singleTop"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.prefs.SettingsActivity"
             android:launchMode="singleTop"
@@ -125,12 +134,12 @@
 
         <service
             android:name=".CaptureService"
-            android:permission="android.permission.BIND_VPN_SERVICE"
+            android:exported="false"
             android:foregroundServiceType="specialUse"
-            android:exported="false">
-
-            <property android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="run the VpnService to monitor network traffic"/>
+            android:permission="android.permission.BIND_VPN_SERVICE">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="run the VpnService to monitor network traffic" />
 
             <intent-filter>
                 <action android:name="android.net.VpnService" />
@@ -138,23 +147,23 @@
         </service>
         <service
             android:name=".VpnReconnectService"
-            android:foregroundServiceType="specialUse"
-            android:exported="false">
-
-            <property android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="waits for the termination of the active VpnService"/>
+            android:exported="false"
+            android:foregroundServiceType="specialUse">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="waits for the termination of the active VpnService" />
         </service>
 
-        <receiver android:name="com.emanuelef.remote_capture.ActionReceiver" />
-
+        <receiver android:name=".ActionReceiver" />
         <receiver
             android:name=".BootReceiver"
             android:exported="false">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
