--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.emanuelef.remote_capture"
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.emanuelef.remote_capture">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -31,9 +29,7 @@
         android:required="false" />
     <uses-feature
         android:name="android.hardware.wifi"
-        android:required="false" />
-
-    <!-- Tesi: Permessi per geolocalizzazione -->
+        android:required="false" /> <!-- Tesi: Permessi per geolocalizzazione -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
@@ -41,7 +37,6 @@
     <application
         android:name=".PCAPdroid"
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:banner="@drawable/banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/pcapdroid_app_name"
@@ -49,25 +44,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:replace="android:label"
         tools:targetApi="tiramisu">
+
         <!-- Activity per tesi -->
         <activity
-            android:name="serri.tesi.ui.MainActivity"
+            android:name="serri.tesi.ui.TesiEntryActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
+        <activity
+            android:name="serri.tesi.ui.TesiLoginActivity"
+            android:exported="false" />
+
+        <activity
+            android:name="serri.tesi.ui.MainActivity"
+            android:exported="true"></activity>
+
+        <!-- fine -->
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.SplashScreen">
-        </activity>
+            android:theme="@style/AppTheme.SplashScreen" />
         <activity
             android:name=".activities.CaptureCtrl"
             android:exported="true"
@@ -163,7 +168,6 @@
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
-
     </application>
 
 </manifest>
