--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,4 +144,8 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
     implementation("com.google.code.gson:gson:2.10.1")
 
+    //grafici
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+
 }
