--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,4 +120,6 @@ dependencies {
     implementation 'com.github.KaKaVip:Android-Flag-Kit:v0.1'
     implementation 'com.github.AppIntro:AppIntro:6.2.0'
     implementation 'com.github.androidmads:QRGenerator:1.0.1'
+    implementation 'com.github.luben:zstd-jni:1.5.7-7@aar'
+    testImplementation 'com.github.luben:zstd-jni:1.5.7-7'
 }
