--- a/app/src/main/jni/CMakeLists.txt
+++ b/app/src/main/jni/CMakeLists.txt
@@ -23,3 +23,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(common)
 add_subdirectory(pcapd)
 add_subdirectory(core)
+add_subdirectory(zstd)
