--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,13 @@ android.enableJetifier=true
 android.javaCompile.suppressSourceTargetDeprecationWarning=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+android.defaults.buildfeatures.resvalues=true
+android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
+android.enableAppCompileTimeRClass=false
+android.usesSdkInManifest.disallowed=false
+android.uniquePackageNames=false
+android.dependency.useConstraints=true
+android.r8.strictFullModeForKeepRules=false
+android.r8.optimizedResourceShrinking=false
+android.builtInKotlin=false
+android.newDsl=false
